--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -21,7 +21,7 @@
                     <tr class="even">
                         <td><input type="checkbox" name="enable" value="1" /></td>
                         <td><input type="text" name="feed" size="20" value="$feed" /></td>
-                        <td><input type="url" name="uri" size="35" /></td>
+                        <td><input type="url" name="uri" /></td>
                         <td class="nowrap">
                             <button type="submit" class="btn btn-default Save"><span class="glyphicon glyphicon-plus"></span> $T('button-add')</button>
                         </td>
