--- a/interfaces/Config/templates/config_scheduling.tmpl
+++ b/interfaces/Config/templates/config_scheduling.tmpl
@@ -36,13 +36,13 @@ else:
                 <div class="field-pair">
                     <label class="config">$T('sch-frequency')</label>
                     <div class="checkbox-days">
-                      <p><input type="checkbox" name="daysofweek" value="1"><label>$T('monday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="2"><label>$T('tuesday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="3"><label>$T('wednesday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="4"><label>$T('thursday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="5"><label>$T('friday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="6"><label>$T('saturday')</label></p>
-                      <p><input type="checkbox" name="daysofweek" value="7"><label>$T('sunday')</label></p>
+                      <label><input type="checkbox" name="daysofweek" value="1"/> $T('monday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="2"/> $T('tuesday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="3"/> $T('wednesday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="4"/> $T('thursday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="5"/> $T('friday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="6"/> $T('saturday')</label><br />
+                      <label><input type="checkbox" name="daysofweek" value="7"/> $T('sunday')</label>
                     </div>
                 </div>
                 <div class="field-pair alt">
@@ -55,7 +55,7 @@ else:
                 </div>
                 <div class="field-pair">
                     <label class="config" for="arguments">$T('sch-arguments')</label>
-                    <input type="text" name="arguments" id="arguments" value="" size="20" />
+                    <input type="text" name="arguments" id="arguments" class="select_width" />
                 </div>
                 <div class="field-pair">
                     <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> $T('button-addSchedule')</button>
