--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -29,7 +29,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="tvfoldername">$T('sortString')</label>
-                    <input type="text" id="tvfoldername" name="tv_sort_string" value="$tv_sort_string" size="50" />
+                    <input type="text" id="tvfoldername" name="tv_sort_string" value="$tv_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
                 <div class="field-pair alt">
@@ -44,7 +44,7 @@
                 <div id="previewtv" class="example">
                     <div class="field-pair">
                         <label class="config" for="tvsamplename">Test Data</label>
-                        <input type="text" id="tvsamplename" name="tvsamplename" placeholder="$T('show-name') S01E05 - $T('ep-name') [DTS]" size="50" />
+                        <input type="text" id="tvsamplename" name="tvsamplename" placeholder="$T('show-name') S01E05 - $T('ep-name') [DTS]" />
                         <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                     </div>
                     <div class="field-pair">
@@ -185,12 +185,12 @@
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="moviefoldername">$T('sortString')</label>
-                    <input type="text" name="movie_sort_string" id="moviefoldername" value="$movie_sort_string" size="50" />
+                    <input type="text" name="movie_sort_string" id="moviefoldername" value="$movie_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="movieextra">$T('multiPartLabel')</label>
-                    <input type="text" name="movie_sort_extra" id="movieextra" value="$movie_sort_extra" size="50" />
+                    <input type="text" name="movie_sort_extra" id="movieextra" value="$movie_sort_extra" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
                 <div class="field-pair alt">
@@ -204,7 +204,7 @@
                 <div id="previewmovie" class="example">
                     <div class="field-pair">
                         <label class="config" for="moviesamplename">Test Data</label>
-                        <input type="text" id="moviesamplename" name="moviesamplename" placeholder="$T('movie-sp-name') (2009)" size="50" />
+                        <input type="text" id="moviesamplename" name="moviesamplename" placeholder="$T('movie-sp-name') (2009)" />
                         <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                     </div>
                     <div class="field-pair">
@@ -320,7 +320,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="datefoldername">$T('sortString')</label>
-                    <input type="text" name="date_sort_string" id="datefoldername" value="$date_sort_string" size="50" />
+                    <input type="text" name="date_sort_string" id="datefoldername" value="$date_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
                 <div class="field-pair alt">
@@ -334,7 +334,7 @@
                 <div id="previewdate" class="example">
                     <div class="field-pair">
                         <label class="config" for="datesamplename">Test Data</label>
-                        <input type="text" id="datesamplename" name="datesamplename" placeholder="$T('show-name') 2009-01-02" size="50" />
+                        <input type="text" id="datesamplename" name="datesamplename" placeholder="$T('show-name') 2009-01-02" />
                         <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                     </div>
                     <div class="field-pair">
