--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -18,27 +18,29 @@
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="download_dir">$T('opt-download_dir')</label>
-                    <input type="text" name="download_dir" id="download_dir" value="$download_dir" size="45" />
+                    <input type="text" name="download_dir" id="download_dir" value="$download_dir" />
                     <span class="desc">$T('explain-download_dir')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="download_free">$T('opt-download_free')</label>
-                    <input type="text" name="download_free" id="download_free" value="$download_free" size="8" />
+                    <input type="text" name="download_free" id="download_free" value="$download_free" class="smaller_input"  />
                     <span class="desc">$T('explain-download_free')</span>
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="complete_dir">$T('opt-complete_dir')</label>
-                    <input type="text" name="complete_dir" id="complete_dir" value="$complete_dir" size="45" />
+                    <input type="text" name="complete_dir" id="complete_dir" value="$complete_dir" />
                     <span class="desc">$T('explain-complete_dir')</span>
                 </div>
-                <div class="field-pair <!--#if $nt then "disabled" else "" #-->">
+                <!--#if not $nt#-->
+                <div class="field-pair">
                     <label class="config" for="permissions">$T('opt-permissions')</label>
-                    <input type="text" name="permissions" id="permissions" value="$permissions" size="8" <!--#if $nt then 'readonly="readonly" disabled="disabled"' else "" #--> />
+                    <input type="text" name="permissions" id="permissions" value="$permissions" class="smaller_input" <!--#if $nt then 'readonly="readonly" disabled="disabled"' else "" #--> />
                     <span class="desc">$T('explain-permissions')</span>
                 </div>
+                <!--#end if#-->
                 <div class="field-pair alt">
                     <label class="config" for="dirscan_dir">$T('opt-dirscan_dir')</label>
-                    <input type="text" name="dirscan_dir" id="dirscan_dir" value="$dirscan_dir" size="45" />
+                    <input type="text" name="dirscan_dir" id="dirscan_dir" value="$dirscan_dir" />
                     <span class="desc">$T('explain-dirscan_dir')</span>
                 </div>
                 <div class="field-pair">
@@ -48,17 +50,17 @@
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="script_dir">$T('opt-script_dir')</label>
-                    <input type="text" name="script_dir" id="script_dir" value="$script_dir" size="45" />
+                    <input type="text" name="script_dir" id="script_dir" value="$script_dir" />
                     <span class="desc">$T('explain-script_dir')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="email_dir">$T('opt-email_dir')</label>
-                    <input type="text" name="email_dir" id="email_dir" value="$email_dir" size="45" />
+                    <input type="text" name="email_dir" id="email_dir" value="$email_dir" />
                     <span class="desc">$T('explain-email_dir')</span>
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="password_file">$T('opt-password_file')</label>
-                    <input type="text" name="password_file" id="password_file" value="$password_file" size="45" />
+                    <input type="text" name="password_file" id="password_file" value="$password_file" />
                     <span class="desc">$T('explain-password_file')</span>
                 </div>
                 <div class="field-pair">
@@ -82,18 +84,18 @@
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="admin_dir">$T('opt-admin_dir')</label>
-                    <input type="text" name="admin_dir" id="admin_dir" value="$admin_dir" size="45" />
+                    <input type="text" name="admin_dir" id="admin_dir" value="$admin_dir" />
                     <span class="desc">$T('explain-admin_dir1')</span>
                     <span class="desc">$T('explain-admin_dir2')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="log_dir">$T('opt-log_dir')</label>
-                    <input type="text" name="log_dir" id="log_dir" value="$log_dir" size="45" />
+                    <input type="text" name="log_dir" id="log_dir" value="$log_dir" />
                     <span class="desc">$T('explain-log_dir')</span>
                 </div>
                 <div class="field-pair alt">
                     <label class="config" for="nzb_backup_dir">$T('opt-nzb_backup_dir')</label>
-                    <input type="text" name="nzb_backup_dir" id="nzb_backup_dir" value="$nzb_backup_dir" size="45" />
+                    <input type="text" name="nzb_backup_dir" id="nzb_backup_dir" value="$nzb_backup_dir" />
                     <span class="desc">$T('explain-nzb_backup_dir')</span>
                 </div>
                 <div class="field-pair">
